--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         the next level
       </p>
     </main>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/Nsebo">Uzochukwu Cecilia Oloh</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/Nsebo">Uzochukwu Cecilia Oloh</a>.
+      </div>
+    </footer>
   </body>
 </html>
